# Messenger

./: CMakeLists.txt  LICENSE  README.md  main.cpp  server.cpp  server.h
Client/: CMakeLists.txt  authorisationwindow.cpp  authorisationwindow.h  authorisationwindow.ui  authwindow.cpp  authwindow.h  main.cpp  mainwindow.cpp  mediator.h  websocketclient.cpp  websocketclient.h
Client/Client/: authwindow.cpp  authwindow.h  authwindow.ui  websocketclient.cpp  websocketclient.h
Client/include/: authwindow.h  chatwindow.h  mediator.h  websocketclient.h
Client/src/: CMakeLists.txt  authwindow.cpp  main.cpp  mediator.cpp  mediator.h  websocketclient.cpp
Client/src/AuthorisationWindow/: authwindow.cpp  authwindow.h  authwindow.ui
Client/src/ChatWindow/: chatdelegate.cpp  chatdelegate.h  chatwindow.cpp  chatwindow.h  chatwindow.ui
Client/src/Network/: websocketclient.cpp  websocketclient.h
Client/src/Network/Command/: icommand.h  invokecommand.cpp  invokecommand.h  jsonfactory.cpp  jsonfactory.h  receivecommand.h
Client/tests/: CMakeLists.txt  example_test.cpp
Client/translations/: Client_ru_RU.ts
Client/ui/: chatwindow.ui
Server/: CMakeLists.txt  main.cpp  readme.txt  server.cpp  server.h
Server/src/: CMakeLists.txt  main.cpp  mediator.cpp  mediator.h  server.cpp  server.h
Server/src/DatabaseManager/: databasefacade.cpp  databasefacade.h  databasestartupmanager.cpp  databasestartupmanager.h  querymanager.cpp  querymanager.h
Server/src/Interface/: icommand.h  imediator.h
Server/src/Logger/: logger.cpp  logger.h
Server/src/WebSocketManager/: server.cpp  sessionmanager.cpp  sessionmanager.h  websocketfacade.cpp  websocketfacade.h  websocketmanager.cpp  websocketmanager.h  websocketstartupmanager.cpp  websocketstartupmanager.h
Server/src/WebSocketManager/Command/: invokecommand.cpp  invokecommand.h  receivecommand.cpp  receivecommand.h
Server/tests/: CMakeLists.txt  test_main.cpp
